--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
+  },
+  "homepage" : "https://licarth.github.io/a320pfd"
 }
