--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pfd-react",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://licarth.github.io/a320pfd",  
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -16,6 +17,5 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0"
-  },
-  "homepage" : "https://licarth.github.io/a320pfd"
+  }
 }
