--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "pfd-react",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://licarth.github.io/a320pfd",  
+  "homepage": "http://licarth.github.io/a320pfd",
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
