--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "request-promise": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
